@@ -1,3 +1,8 @@
+2010-02-08  Tristan Gingold  <gingold@adacore.com>
+
+	* mach-o.c (bfd_mach_o_canonicalize_one_reloc): Set reloc.r_extern
+	for non-scattered relocations.
+
 2010-02-08  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* elf32-ppc.c (ppc_elf_begin_write_processing): Allow empty
